[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/images/player_spritemap_50_27_1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sprite:offset:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("sprite:offset:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.297148, -5.77842, -16.8665, -0.170637, -6.25, 0, 23.7338, 50, -0.374292, 49.0079, 0.257823, 15.8879 ),
"times": PoolRealArray( 0, 0.5, 3 )
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reportDeath"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.11, 0.23, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.11, 0.23, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.11, 0.23, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.11, 0.23, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 0, 13, 0, 13, 0, 13 ]
}

[sub_resource type="Animation" id=15]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6, 13 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 6, 13 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 6.05269, 7.96021 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 6, 7 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 6, 2 )

[sub_resource type="Animation" id=22]
resource_name = "Invincible"
length = 0.4
loop = true
step = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:modulate:v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 0.266985, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=23]
resource_name = "InvincibleClear"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:modulate:v")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "invincible_over"
} ]
}

[sub_resource type="Animation" id=24]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=25]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "endTeleport"
} ]
}

[sub_resource type="Animation" id=26]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "endTeleport"
} ]
}

[sub_resource type="Animation" id=27]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "endTeleport"
} ]
}

[node name="Player" type="KinematicBody2D"]
pause_mode = 2
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 1.0 ],
"_edit_vertical_guides_": [ -108.0 ]
}
speed = Vector2( 300, 600 )
gravity = 2000.0
stomp_impulse = 900
friction = 300
max_speed = 150
max_run_speed = 200
run_speedboost = 150

[node name="sprite" type="Sprite" parent="."]
show_behind_parent = true
light_mask = 513
material = SubResource( 1 )
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
offset = Vector2( 0, 50 )
hframes = 27
frame = 12

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
drag_margin_v_enabled = true
offset_h = 0.74
offset_v = -0.8
drag_margin_left = 0.39
drag_margin_top = 1.0
drag_margin_right = 0.0
drag_margin_bottom = 0.85
editor_draw_limits = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch_Big = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Jump = SubResource( 4 )
"anims/Jump Big" = SubResource( 5 )
"anims/Turn Left" = SubResource( 6 )
"anims/Turn Left Big" = SubResource( 7 )
"anims/Turn Right" = SubResource( 8 )
"anims/Turn Right Big" = SubResource( 9 )
"anims/Walk Left" = SubResource( 10 )
"anims/Walk Left Big" = SubResource( 11 )
"anims/Walk Right" = SubResource( 12 )
"anims/Walk Right Big" = SubResource( 13 )
anims/grow = SubResource( 14 )
anims/stand_right = SubResource( 15 )
anims/stand_right_big = SubResource( 16 )

[node name="BigBarrierCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 17 )

[node name="BigEnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.345098, 0.862745, 0.133333, 1 )
self_modulate = Color( 0.843137, 0.0509804, 0.0509804, 1 )
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigEnemyDetector"]
position = Vector2( 0, -14 )
shape = SubResource( 18 )

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.129412, 0.0823529, 0.752941, 1 )
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( -1.86269e-09, -8 )
rotation = -0.00660269
shape = SubResource( 19 )

[node name="BarrierCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 20 )

[node name="BounceDetector" type="Area2D" parent="."]
modulate = Color( 0.945098, 0.0313726, 0.0313726, 1 )
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceDetector"]
position = Vector2( 0, 1 )
shape = SubResource( 21 )

[node name="GrowTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( -1.41394, -11 )
enabled = true
cast_to = Vector2( 0, -10 )
collision_mask = 2

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Modifier" type="AnimationPlayer" parent="."]
anims/Invincible = SubResource( 22 )
anims/InvincibleClear = SubResource( 23 )
anims/damaged = SubResource( 24 )
anims/tunnel_down = SubResource( 25 )
anims/tunnel_right = SubResource( 26 )
anims/tunnel_up = SubResource( 27 )

[node name="TeleportEndTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -10 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="BigEnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="BounceDetector" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="GrowTimer" to="." method="_on_GrowTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="TeleportEndTimer" to="." method="_on_TeleportEndTimer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
